samples/_failures_safe/1761624131_f1505d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5224efff.c: In function ‘free_graph’:
./samples/SAFE/__tmp_5224efff.c:183:21: error: expected ‘;’ at end of input
  183 |                 free
      |                     ^
      |                     ;
./samples/SAFE/__tmp_5224efff.c:183:17: error: expected declaration or statement at end of input
  183 |                 free
      |                 ^~~~
./samples/SAFE/__tmp_5224efff.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5224efff.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5224efff.c:183:17: error: expected declaration or statement at end of input
